--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,13 @@ section {
     height: 45vh;
   }
 }
-
+.error_container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
 /* loading */
 .loading_container {
   position: absolute;
