--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ section {
 
 @media (min-width: 768px) {
   .logo {
-    width: 50%;
+    width: 40%;
   }
 
   h1 {
@@ -103,14 +103,24 @@ section {
     padding-top: 10%;
   }
   .select_container {
-    width: 40%;
-    max-width: 320px;
+    width: 50%;
+    max-width: 600px;
   }
 
   .chart_container {
     width: 60%;
     margin: auto;
     height: 45vh;
+  }
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .select_container {
+    width: 60%;
+  }
+  .chart_container {
+    width: 82%;
+    margin: auto;
+    height: 45vw;
   }
 }
 .error_container {
